# HBIOT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
configs/: config-splits.yaml  default_config.yaml
docs/: index.html
pipeline/: __init__.py
pipeline/data/: __init__.py  datamodule_registry.py  meg_datamodules.py  meg_datasets.py
pipeline/data/preprocessing/: __init__.py  annotation.py  cache_recordings.py  config.py  feature_extraction.py  file_manager.py  filtering_stats.py  segmentation.py  signal_processing.py
pipeline/eval/: __init__.py  metrics.py
pipeline/models/: __init__.py  biot.py  commons.py  emsnet.py  example_model.py  famed.py  full_attention_transformer.py  hbiot.py  model_registry.py  sfcn.py  x_transformer_wrapper.py
pipeline/optim/: __init__.py  loss_registry.py  optimizer_registry.py  scheduler_registry.py
pipeline/training/: __init__.py  callback_registry.py  lightning_module.py  unsupervised_pretrain_lit_mod.py
pipeline/utils/: __init__.py  config_handler.py
scripts/: generate_splits.py  predict.py  preprocess_recordings.py  statistical_analysis.py
