[project]
name = "hbiot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "joblib>=1.5.3",
    "lightning>=2.6.1",
    "linear-attention-transformer>=0.19.1",
    "mne[hdf5]>=1.11.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "typeguard>=4.4.4",
    "x-transformers>=2.16.0",
]
